--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -14,7 +14,7 @@ jobs:
       - name: GitHub Readme Blog Post Action
         uses: ErrorGamer2000/github-readme-blog-post-action@v1
         with:
-          feed_urls: "vuyisile.com/feed"
+          feed_urls: "https://vuyisile.com/feed/"
 
       - name: Commit changed files
         uses: stefanzweifel/git-auto-commit-action@v4
