--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -15,6 +15,7 @@ jobs:
         uses: ErrorGamer2000/github-readme-blog-post-action@v1
         with:
           feed_urls: "https://vuyisile.com/feed/"
+          show_feed_title: false
 
       - name: Commit changed files
         uses: stefanzweifel/git-auto-commit-action@v4
